main.css
*{
  margin:0px;
  padding:0px;
}

html {
  scroll-behavior: smooth;
}

h1,h2,h3,h4{
  font-family: 'Raleway', sans-serif;
}

p{
  margin:0px;
  font-size: 24px;
  font-family: 'Roboto',sans-serif;
}

.text-bold{
  font-weight: bold;
}

.container{
  padding-bottom: 50px;
}

body{
  background-color: #1B262C;
  color:white;
}

a{
  font-size: 30px;
}

h2{
  color:white;
}

h3{
  color:#BBE1FA
}

.navbar{
  padding-left:0px;
}

.nav-link{
  margin-right: 10px;
}

.navbar-brand img{
  height: 60px;
  fill:white;
}

.navbar .logo-text{
  font-size: 60px;
  color:white; 
}

#navbar{
  margin-top: 20px;
}

#navbar-custom {
  background-color: #1B262C;
}

.navbar-nav a{
  color:white;
}

.navbar-nav a:hover{
  text-decoration: underline;

}

.navbar-expand-sm .navbar-nav .nav-link{
  padding-left:0;
}


navbar navbar-expand-sm navbar-dark{
  padding-left:0;
}

#resume-button{
  background-color: #BBE1FA;
  color:black !important;
  padding-bottom: 5px;
}

/* Project images and overlay */

.project-content{
  display: flex;
  flex-wrap: wrap;
}

.image-container{
  position: relative;
  height:100%;
}

.project-content img{
  width:250px;
  height:250px;
  object-fit: contain;
  padding:20px;
  border:2px solid #475c6b;
}

.overlay-content{
  opacity: 0;
  background-color: rgba(50, 130, 184,0.5);
  position: absolute;
  text-align: center;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height:100%;
  top:0;
  left:0;
  z-index: 105;
}

.item-overlay{
  background-color: dodgerblue;
  position: absolute;
  top:0;
  left:0;
  height:100%;
  width:100%;
  z-index: 200;
  background-color: rgba(50, 130, 184,0);
}

.overlay-content img{
  border:none
}

.overlay-content:hover{
  opacity: 1;
}

/* Popup Modal */

.custom-modal{
  position: fixed;
  max-width:1200px;
  width:100%;
  height:700px;
  background-color: #0F4C75;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
  z-index: 300;
  border-radius: 15px;
  display: none;
}

.custom-modal-content-left{
  width:500px;
  height:500px;
  background-color: #3282B8;
  padding-left: 20px;
  padding-top: 20px;
  border-radius: 10px;
  position: relative;
}

.custom-modal-content-right{
  position: relative;
}

.close-icon{
  height:30px;
  position: absolute;
  right:5px;
  top:5px;
  cursor: pointer;
  z-index: 301;
}

.thumbnail-container{
  display: flex;
  justify-content: center;
  position: absolute;
  bottom:-30;
  left:0;
  width:500px;
}

#mobile-thumbnail-container{
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: absolute;
  bottom:-50;
  left:0;
  width:500px;
}

.circle{
  border-radius: 50%;
  height:20px;
  width:20px;
  background-color: #BBE1FA;
  margin-right: 10px;
  cursor: pointer;
}

.showItem{
  display: block;
}

.custom-modal-content-mobile{
  display: none;
  width:500px;
  height:500px;
  background-color: #3282B8;
  padding-left: 20px;
  padding-top: 20px;
  border-radius: 10px;
  position: relative;
}

#custom-modal-mobile-text-content{
  
}

#mobile-image{
  display: none;
}

/* Components  */
.git-button{
  background-color:#BBE1FA ;
  color:#0F4C75;
  font-size: 20px;
  cursor: pointer;
  margin-top: 10px;
  position: absolute;
  bottom:20px;
  left:20px;
}

.git-button:hover{
  color:black;
}


@media screen and (max-width:1024px){

  .custom-modal-content-right{
    display: none !important;
  }

  .custom-modal-content-left{
    display: none !important;
  }

  .custom-modal-content-mobile{
    display: block;
  }

  #download-icon{
    display: none;
  }

}

.card{
  margin-bottom: 50px;
}
.card-title{
  text-align: center;
  color:black;
  font-size:25px;
}

.card-text{
  text-align: center;
  color:black;
  font-size:20px;
}

.card-img-top{

  
}

.btn{
  background-color:#0F4C75;
  color:#fff;
}

.btn:hover{
  color:#BBE1FA;
}

